# Infinity.ai

./: .gitignore  README.md  setup_llama.ps1
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/infinity/ai/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.md
app/src/main/cpp/: CMakeLists.txt  infinity_jni.cpp  infinity_jni_stub.cpp
app/src/main/cpp/llama/common/: arg.cpp  common.h  speculative.cpp
app/src/main/java/com/infinity/ai/: MainActivity.kt
app/src/main/java/com/infinity/ai/ai/engine/: LlamaEngine.kt  LocalAIEngine.kt
app/src/main/java/com/infinity/ai/ai/prompts/: PromptFormatter.kt
app/src/main/java/com/infinity/ai/ai/repository/: AIRepository.kt
app/src/main/java/com/infinity/ai/ai/runtime/: LlamaJniBridge.kt
app/src/main/java/com/infinity/ai/ai/state/: AIInferenceState.kt
app/src/main/java/com/infinity/ai/ai/storage/: ModelStorageManager.kt
app/src/main/java/com/infinity/ai/ai/streaming/: TokenStreamBuffer.kt
app/src/main/java/com/infinity/ai/circle/: CircleLearnActivity.kt  CircleLearnBottomSheet.kt  CircleLearnProcessor.kt  CircleLearnViewModel.kt  ContentTypeDetector.kt  FloatingBubbleView.kt  InfinityOverlayService.kt  OverlayComposeHost.kt  OverlayPermissionHelper.kt  RegionSelectionView.kt
app/src/main/java/com/infinity/ai/data/: OnboardingPreference.kt  ThemePreference.kt
app/src/main/java/com/infinity/ai/model/: ChatMessage.kt
app/src/main/java/com/infinity/ai/ocr/: AiTextProcessor.kt  OcrTextExtractor.kt
app/src/main/java/com/infinity/ai/pdf/: PdfTextExtractor.kt
app/src/main/java/com/infinity/ai/ui/components/: AiBodyOrb.kt  Components.kt
app/src/main/java/com/infinity/ai/ui/navigation/: AppNavigation.kt
app/src/main/java/com/infinity/ai/ui/screens/: ChatScreen.kt  CircleLearnEntryScreen.kt  DashboardScreen.kt  LibraryScreen.kt  OcrScreen.kt  OnboardingScreen.kt  PdfSummaryScreen.kt  QuizScreen.kt  ScreenshotExplainerScreen.kt  SettingsScreen.kt  SharedFeatureComponents.kt  SplashScreen.kt  ToolsScreen.kt  VoiceScreen.kt
app/src/main/java/com/infinity/ai/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/infinity/ai/viewmodel/: ChatViewModel.kt  LibraryViewModel.kt  OcrViewModel.kt  PdfSummarizeViewModel.kt  QuizViewModel.kt  ScreenshotExplainerViewModel.kt  ThemeViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/mipmap-xhdpi/: ic_launcher.xml
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: file_provider_paths.xml
app/src/test/java/com/infinity/ai/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
